# H-GEMO

./: .gitignore  MANIFEST.md  README.md  pyproject.toml  requirements.txt
configs/: bitstring_ablation.yaml  main_bench.yaml  smoke.yaml
configs/sensitivity/: bs_pop20.yaml  bs_pop30.yaml  bs_pop50.yaml  bs_pop80.yaml  pop_size_20.yaml  pop_size_30.yaml  pop_size_80.yaml  routing_0.2_0.4_0.4.yaml  routing_0.2_0.6_0.2.yaml  routing_0.6_0.2_0.2.yaml  topm_ratio_005.yaml  topm_ratio_010.yaml  topm_ratio_020.yaml  topm_ratio_025.yaml
data/dense_benchmark_v3/Emotions/fold0/: test.npz  trainval.npz
data/dense_benchmark_v3/Emotions/fold1/: test.npz  trainval.npz
data/dense_benchmark_v3/Emotions/fold2/: test.npz  trainval.npz
data/dense_benchmark_v3/Emotions/fold3/: test.npz  trainval.npz
data/dense_benchmark_v3/Emotions/fold4/: test.npz  trainval.npz
hgemo/: __init__.py  cli.py  config.py  datasets.py  experiment.py  genotypes.py  logging_utils.py  metrics.py  ml_eval.py  mlknn_impl.py  npz_format.py  nsga2.py  utils.py
scripts/: check_bundle.sh  create_venv.sh  launch_bench.sh  launch_bitstring.sh  launch_sensitivity.sh  prepare_datasets.sh
